fixed overflow issue on cards and made images clickable

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -4,12 +4,9 @@ body {
   margin: 0;
   background-image: url("../images/movie-background-collage.jpg");
   background-size: cover;
-  background-color: #001d2c;
+  background-color: #011017;
 }
 
-.pollTitle {
-  margin-bottom: 10px;
-}
 
 .homepage-title {
 font-family: "Limelight", cursive;
@@ -33,8 +30,7 @@ font-family: "Limelight", cursive;
 .card {
   max-height: 300px;
   min-height: 300px;
-  margin-top: 20px;
-  background-color: black;
+  background-color: rgba(0, 0, 0, .5) !important;
 }
 
 .card-img-top {
@@ -47,13 +43,21 @@ font-family: "Limelight", cursive;
   margin-top: -10px;
 }
 
+.img-link {
+  padding-right: 0;
+}
+
+
+.card-title {
+  text-align: center !important;
+  margin-top: 6px;
+}
 .title-container {
   height: 60px;
   overflow: hidden;
 }
 
 .card-body.custom-body {
-  height: 100px !important;
   padding: 0.5em;
 }
 
@@ -62,6 +66,24 @@ footer {
   width: 100%;
   height: 50px;
   padding: 10px;
+}
+
+.info-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+}
+
+.card-text {
+  white-space: nowrap;
+  color: #BBBBBB !important;
+  font-size: 12px;
+}
+
+.pollTitle {
+  margin-bottom: 5px;
+  text-align: center;
+  font-size: 20px;
 }
 
 @media screen and (max-width: 650px) {
@@ -94,7 +116,28 @@ footer {
   .custom-about {
     display: none;
   }
+
+  .card-text {
+    font-size: 10px;
+  }
 }
+
+@media screen and (max-width: 990px) {
+  .info-container {
+    font-size: 0.9em;
+    margin-top: 8px;
+  }
+
+  .pollTitle {
+    text-align: center;
+    font-size: 16px !important;
+  }
+
+  .card-text {
+    font-size: 9px;
+  }
+}
+
 
 @keyframes slideIn {
   from {
